--- a/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
+++ b/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WEy-2h-POy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WEy-2h-POy">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -314,27 +314,30 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebo-8l-bt3">
-                                                            <rect key="frame" x="8" y="25" width="70" height="70"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="70" id="jEn-z8-u6N"/>
-                                                            </constraints>
-                                                        </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tG0-tT-reI">
-                                                            <rect key="frame" x="100" y="25" width="191" height="16"/>
+                                                            <rect key="frame" x="123" y="25" width="168" height="16"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebo-8l-bt3">
+                                                            <rect key="frame" x="30" y="25" width="70" height="70"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="70" id="Lle-aO-csB"/>
+                                                            </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="50"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </imageView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="centerY" secondItem="p5D-rm-Lor" secondAttribute="centerY" id="Dx1-DO-SHs"/>
-                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="top" secondItem="tG0-tT-reI" secondAttribute="top" id="MsC-4M-Kha"/>
-                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="leading" secondItem="p5D-rm-Lor" secondAttribute="leadingMargin" id="Xex-zj-GDc"/>
-                                                        <constraint firstItem="tG0-tT-reI" firstAttribute="leading" secondItem="ebo-8l-bt3" secondAttribute="trailing" constant="22" id="Y5F-VH-Rbn"/>
+                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="centerY" secondItem="p5D-rm-Lor" secondAttribute="centerY" id="402-1t-Np6"/>
+                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="leading" secondItem="p5D-rm-Lor" secondAttribute="leadingMargin" constant="22" id="4AC-vL-PZd"/>
+                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="top" secondItem="tG0-tT-reI" secondAttribute="top" id="JfK-dg-qNu"/>
                                                         <constraint firstAttribute="trailingMargin" secondItem="tG0-tT-reI" secondAttribute="trailing" constant="21" id="b0u-rj-aZ7"/>
-                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="top" secondItem="p5D-rm-Lor" secondAttribute="topMargin" constant="15" id="hCj-EZ-NNI"/>
                                                         <constraint firstAttribute="bottomMargin" secondItem="tG0-tT-reI" secondAttribute="bottom" constant="69" id="kud-v2-kwK"/>
+                                                        <constraint firstItem="tG0-tT-reI" firstAttribute="leading" secondItem="ebo-8l-bt3" secondAttribute="trailing" constant="23" id="nax-vl-Hka"/>
+                                                        <constraint firstItem="ebo-8l-bt3" firstAttribute="top" secondItem="p5D-rm-Lor" secondAttribute="topMargin" constant="15" id="ofA-Ew-JfL"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
@@ -576,11 +579,21 @@
                                             <constraint firstAttribute="height" constant="304" id="xb0-JL-57A"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dc5-CL-Foz">
+                                        <rect key="frame" x="68" y="400" width="185" height="30"/>
+                                        <state key="normal" title="View Pending Transactions"/>
+                                        <connections>
+                                            <segue destination="hUV-xj-pbM" kind="show" id="lfo-nW-5V6"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.73333333329999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="zsi-Ef-IMR" firstAttribute="centerY" secondItem="VYg-3a-XFC" secondAttribute="centerY" id="7GR-jT-Idc"/>
+                                    <constraint firstItem="dc5-CL-Foz" firstAttribute="top" secondItem="yYx-1M-4FT" secondAttribute="bottom" constant="8" id="hER-WQ-qbY"/>
+                                    <constraint firstItem="dc5-CL-Foz" firstAttribute="centerX" secondItem="zsi-Ef-IMR" secondAttribute="centerX" id="qoE-xs-7uH"/>
                                     <constraint firstItem="zsi-Ef-IMR" firstAttribute="centerX" secondItem="VYg-3a-XFC" secondAttribute="centerX" id="rJs-ll-Mxe"/>
+                                    <constraint firstAttribute="bottom" secondItem="dc5-CL-Foz" secondAttribute="bottom" constant="50" id="z7h-MK-iHe"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1197,7 +1210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9xT-Ik-rzp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="572" y="-564"/>
+            <point key="canvasLocation" x="548" y="-330"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="FRh-kQ-GXm">
@@ -1223,6 +1236,82 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dY2-c4-dLU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1401" y="-782"/>
+        </scene>
+        <!--Pending TransactionVC-->
+        <scene sceneID="2c6-fb-XSj">
+            <objects>
+                <viewController id="hUV-xj-pbM" customClass="PendingTransactionVC" customModule="CMP_0_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5yN-zZ-QtW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dg8-Sx-e0k"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8lU-NT-XW3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqH-Tx-iEt">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rm0-KO-6fg">
+                                        <rect key="frame" x="8" y="75" width="304" height="309"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No Pending Transactions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hc7-RS-So8">
+                                                <rect key="frame" x="0.0" y="8" width="304" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HAa-bS-RlD">
+                                                <rect key="frame" x="8" y="222" width="115" height="79"/>
+                                                <color key="backgroundColor" red="0.89914928149999995" green="1" blue="0.87763751339999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" title="Approve"/>
+                                                <connections>
+                                                    <action selector="ApproveButtonAction:" destination="hUV-xj-pbM" eventType="touchUpInside" id="cGd-Es-Vp0"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YPd-bR-GAw">
+                                                <rect key="frame" x="181" y="222" width="115" height="79"/>
+                                                <color key="backgroundColor" red="0.89914928149999995" green="0.65986561164098245" blue="0.64442031684461321" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" title="Decline"/>
+                                                <connections>
+                                                    <action selector="DeclineButtonAction:" destination="hUV-xj-pbM" eventType="touchUpInside" id="Oia-XY-ezf"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XiF-FD-5ZM">
+                                                <rect key="frame" x="8" y="56" width="288" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06D-cB-zRg">
+                                                <rect key="frame" x="94" y="128" width="117" height="54"/>
+                                                <color key="backgroundColor" red="0.65393285407185953" green="0.89914928149999995" blue="0.88448629752879648" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" title="Refresh"/>
+                                                <connections>
+                                                    <action selector="RefreshButtonAction:" destination="hUV-xj-pbM" eventType="touchUpInside" id="AHn-l5-NHu"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.73333333329999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.96985434459999997" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="ApproveButtonUIButton" destination="HAa-bS-RlD" id="uar-Bu-bsT"/>
+                        <outlet property="DeclineButtonUIButton" destination="YPd-bR-GAw" id="Rq6-de-3z7"/>
+                        <outlet property="RefreshUIButton" destination="06D-cB-zRg" id="Lme-Bc-kbQ"/>
+                        <outlet property="noPendingTransactionsTextField" destination="hc7-RS-So8" id="4Ef-RF-iCD"/>
+                        <outlet property="restaurantNameTextField" destination="XiF-FD-5ZM" id="mwv-6d-G5r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JuX-ip-IBx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="526" y="-1061"/>
         </scene>
     </scenes>
     <resources>
